# Art

GoldenRect/: CMakeLists.txt  main.c
Triangles/: CMakeLists.txt  Inside.c  Outside.c  main.c
